eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-app-deployment
  labels:
    app: grpc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-client
        image: ""
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
