eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
spec:
  selector:
    app: grpc-client
  ports:
  - port: 80
    targetPort: 8081
  type: ClusterIP
